Make ForbiddenAPIs happy